Wed Sep 01 15:40:37 1999  Loic Dachary  <loic@ceic.com>

	* test: implement minimal tests for htsearch and htdig

Tue Aug 31 02:17:04 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/WordRecord.h: Change back to struct to ensure integrity
	when compressed and stored in the word database.

	* htcommon/WordList.cc (Flush): Use HtPack to compress the
	WordRecord before storage.
	([], WordRefs): Use HtUnpack to decompress the WordRecord after
	storage.

Sun Aug 29 00:42:07 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc (convertToBoolean): Remove debugging
	strings.

	* htsearch/parser.h: Add new method score(List) to merge scoring
	for both standard and phrase searching.

	* htsearch/parser.cc(phrase): Keep the current list of successful
	matched words around to pass to score and perform_phrase.
	(perform_phrase): Naively (and slowly, but correctly) loop through
	past words to make sure they match DocID as well as successive locations.
	Move scoring to score().
	(perform_push): Move scoring to score().
	(score): Loop through a list of WordReferences and create a list
	of scored DocMatches.

Sun Aug 29 00:33:17 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc(createLogicalWords): Hack to produce
	correct output with phrase searching (e.g. anything in quotes is
	essentially left alone). Ensure the StringMatch pattern includes
	the phrase with correct spacing as well.
	(setupWords): Add a " token whenever it occurs in the query.
	(convertToBoolean): Make sure booleans are not inserted into
	phrases.

	* htsearch/parser.h: Add new methods phrase and perfor_phrase to
	take care of parsing phrases and performing the actual matching.

	* htsearch/parser.cc(lexan): Return a '"' when present for phrase
	searching.
	(factor): Call phrase() before parsing a factor--phrases are the
	highest priority, so ("RedHat Linux" & Debian) ! Windows makes
	sense.